Version update, code clean. Moved to java8.